# quickui

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  mkheaders.sh
drivers/: Makefile.am  Makefile.in
drivers/common/: Makefile.am  Makefile.in  gfxCheckEvents.c  gfxDrawBox.c  gfxDrawIcon.c  gfxDrawIconPortion.c  gfxDrawImage.c  gfxDrawImage16.c  gfxDrawImage4.c  gfxDrawImagePortion.c  gfxDrawLine.c  gfxEvents.c  gfxFillRegion.c  gfxSetClip.c  masking.c
drivers/include/: gfxdriver.h  quickgfx.h
drivers/jnilib/: Makefile.am  Makefile.in  jnidriver.c  jnidriver.h
drivers/vnc/: Makefile.am  vncfb.c
drivers/vncfb/: Makefile.am  Makefile.in  vncfb.c
drivers/vncfb/vncserver/: Makefile
drivers/vncfb/vncserver/rfb/: rfbconfig.h
drivers/vncfb/vncserver/vncserver2/libvncserver/: main.c
framework/assets/: .gitignore
framework/assets/system/: controls.pdn  rotator.pdn  system.pal  system.qco  system.qpl  system_icons.pdn
framework/java/: .gitignore  build.xml
framework/java/res/assets/system/: controls.qco  loader.qmg  rotator.qco  system.qco  system.qfn  system.qpl  theme.qpl
framework/java/src/com/thegaragelab/quickui/: Application.java  Asset.java  Color.java  Container.java  Context.java  Dialog.java  Dimension.java  Driver.java  EventQueue.java  Font.java  IContext.java  IDimension.java  IPoint.java  IRectangle.java  ISurface.java  IWindow.java  Icon.java  Image.java  InputEvent.java  Padding.java  Palette.java  Point.java  Rectangle.java  SimpleTimer.java  TimedEvent.java  TouchEvent.java  Window.java
framework/java/src/com/thegaragelab/quickui/controls/: AbstractIconButton.java  Button.java  Checkbox.java  ComplexControl.java  ControlEventSource.java  ControlHelper.java  IButton.java  IControl.java  IControlEventHandler.java  Label.java  Padding.java  SimpleControl.java  SystemIconButton.java
framework/java/src/com/thegaragelab/quickui/dialogs/: DialogBusy.java
framework/java/src/com/thegaragelab/quickui/driver/: Asset.java  Driver.java  Icon.java
framework/java/src/com/thegaragelab/quickui/test/: QuickTest.java  ToggleWindow.java
framework/java/src/com/thegaragelab/quickui/utils/: Flags.java  IFlags.java
testing/: Makefile.am  Makefile.in
testing/simple/: Makefile.am  Makefile.in  quicktest.c
tools/: mkbitmap.py  mkfont.py  mkicon.py  mkimage.py  mkpalette.py  mksysfont.py  patchimage.py  quickui.py
