AM_CPPFLAGS = -I$(top_srcdir)/drivers/include

noinst_LTLIBRARIES = libgfxcommon.la

libgfxcommon_la_SOURCES = \
    gfxDrawBox.c \
    gfxDrawIcon.c \
    gfxDrawImage.c \
    gfxDrawImage4.c \
    gfxDrawImage16.c \
    gfxDrawChar.c \
    gfxDrawString.c \
    gfxDrawLine.c \
    gfxFillRegion.c \
    gfxEvents.c \
    gfxSetClip.c \
    masking.c
